<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="@string/settings"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">


        <SwitchPreference
            android:defaultValue="true"
            android:key="key_notification"
            android:title="@string/notifications"
            app:icon="@drawable/ic_baseline_notifications_24" />

<!--        <SeekBarPreference
            android:defaultValue="14"
            android:key="key_font_size"
            android:max="20"
            android:title="@string/font_size"
            app:adjustable="true"
            app:icon="@drawable/ic_font_size"
            app:min="10"
            app:seekBarIncrement="2"
            app:showSeekBarValue="true" />-->

        <ListPreference
            android:defaultValue="system"
            android:entries="@array/appThemes"
            android:entryValues="@array/appThemesValue"
            android:key="key_app_theme"
            android:title="@string/theme"
            app:icon="@drawable/ic_sun_and_moon"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="ar"
            android:entries="@array/appLanguages"
            android:entryValues="@array/appLanguagesValues"
            android:key="key_app_language"
            android:title="@string/language"
            app:icon="@drawable/ic_baseline_language_24"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="@string/more"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">

        <PreferenceScreen
            android:key="key_about_app"
            app:icon="@drawable/ic_baseline_info_24"
            app:title="@string/about" />

        <PreferenceScreen
            android:key="key_rate_app"
            app:icon="@drawable/ic_baseline_star_half_24"
            app:title="@string/rate_app" />

        <PreferenceScreen
            android:key="key_rate_app"
            app:summary="v 1.0.0"
            app:title="@string/app_version" />

    </PreferenceCategory>


</PreferenceScreen>