<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="homeCategoriesAdapter"
            type="com.ismailamassi.presentation.ui.home.adapters.HomeCategoriesAdapter" />

        <variable
            name="todayBundleAdapter"
            type="String" />

        <variable
            name="todayTip"
            type="com.ismailamassi.domain.model.tip.TipDto" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.HomeFragment">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvHomeSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/bg_white_filled_rounder"
                    android:clickable="true"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:minHeight="48dp"
                    android:onClick="@{onClickListener::onClick}"
                    android:paddingVertical="8dp"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_search_black_24dp"
                    app:drawableTint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </FrameLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHomeExploreByCategory"
                style="@style/TextTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{onClickListener::onClick}"
                android:text="@string/categories"
                android:fontFamily="@font/montserrat"
                app:layout_constraintEnd_toStartOf="@+id/tvSeeAllCategories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                tools:ignore="TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHomeTodayBundleLabel"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/today_bundle"
                android:fontFamily="@font/montserrat"
                app:layout_constraintStart_toStartOf="@+id/tvHomeExploreByCategory"
                app:layout_constraintTop_toBottomOf="@+id/rvHomeCategories" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHomeTodayTipLabel"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/today_tip"
                app:layout_constraintStart_toStartOf="@+id/tvHomeTodayBundleLabel"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomeCategories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHomeExploreByCategory"
                app:setAdapter="@{homeCategoriesAdapter}"
                tools:listitem="@layout/item_category_home" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_home_24"
                app:roundedImageUrl="@{`https://picsum.photos/200/300`}"
                app:layout_constraintDimensionRatio="3:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHomeTodayBundleLabel" />

            <TextView
                android:id="@+id/tvHomeTodayTip"
                style="@style/TextBodyStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{todayTip.label}"
                android:layout_marginBottom="16dp"
                tools:text="@string/lorem_span"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHomeTodayTipLabel" />

            <TextView
                android:id="@+id/tvSeeAllCategories"
                style="@style/TextSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:onClick="@{onClickListener::onClick}"
                android:text="@string/see_all"
                android:textColor="@color/blue_500"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_24"
                app:drawableTint="@color/blue_500"
                app:layout_constraintBottom_toBottomOf="@+id/tvHomeExploreByCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHomeExploreByCategory"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>