<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="recipe"
            type="com.ismailamassi.domain.model.recipe.RecipeDto" />

        <variable
            name="ingredientsAdapter"
            type="com.ismailamassi.presentation.ui.recipe_info.adapters.RecipeInfoIngredientAdapter" />

        <variable
            name="stepsAdapter"
            type="com.ismailamassi.presentation.ui.recipe_info.adapters.RecipeInfoStepAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_recipe_info_backup_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_recipeInfoHeader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/ll_recipeInfoContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:minHeight="@dimen/_100sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/recipe_image"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/tvRecipeInfoName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRecipeInfoName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_recipe_info_header"
                android:ellipsize="marquee"
                android:focusable="true"
                android:fontFamily="@font/montserrat"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@{recipe.title}"
                android:paddingHorizontal="@dimen/_4sdp"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                tools:text="@string/app_name" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llPreparationTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPreparationTimeLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_2sdp"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/preparation_time"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPreparationTimeValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/_14_min"
                        android:textSize="@dimen/_12ssp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="#C3C3C3" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llCookingTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCookingTimeLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_2sdp"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/cooking_time"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCookingTimeValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/_14_min"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="#C3C3C3" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llServing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvServingLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_2sdp"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/serving"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvServingValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/_2_persons"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/ll_recipeInfoContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        android:drawablePadding="@dimen/_4sdp"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:labelFor="@id/rv_recipeInfoIngredients"
                        android:minHeight="@dimen/_36sdp"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:text="@string/ingredients"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16ssp"
                        app:drawableStartCompat="@drawable/ic_baseline_menu_24"
                        app:drawableTint="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvRecipeInfoName"
                        tools:ignore="TextContrastCheck" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_recipeInfoIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutAnimation="@anim/layout_animation"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7"
                        app:setAdapter="@{ingredientsAdapter}"
                        tools:listitem="@layout/item_recipe_info_ingredient" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="?attr/colorPrimary"
                        android:drawablePadding="@dimen/_4sdp"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:labelFor="@id/rv_recipeInfoIngredients"
                        android:minHeight="@dimen/_36sdp"
                        android:nestedScrollingEnabled="false"
                        android:paddingStart="@dimen/_4sdp"
                        android:text="@string/steps"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16ssp"
                        app:drawableStartCompat="@drawable/ic_baseline_menu_24"
                        app:drawableTint="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_recipeInfoIngredients"
                        tools:ignore="TextContrastCheck" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_recipeInfoSteps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutAnimation="@anim/layout_animation"
                        android:nestedScrollingEnabled="false"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9"
                        app:setAdapter="@{stepsAdapter}"
                        tools:listitem="@layout/item_recipe_info_step" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>